about-me-changes

--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@
     --highlight-thriller: #BB142215;
     --highlight-photos: #1A73E825;
     --highlight-google: #366FF225;
-    --highlight-about: #9EEBCF60;
+    --highlight-about: #ffdcc5;
 
     --ubapp-color:#005BBB;
     --THD-color:#F96302;
