nasa-case-study

--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,9 @@
     --highlight-photos: #1A73E825;
     --highlight-google: #366FF225;
     --highlight-about: #ffdcc5;
+    --highlight-nasa: #ffcfc7;
 
+    --nasa-color:#E4002B;
     --ubapp-color:#005BBB;
     --THD-color:#F96302;
     --eatxplore-color:#F9CB42;
@@ -151,6 +153,11 @@ hr {
 .video-feature-content {
   font-size: 14px !important;
   line-height: 20px !important;
+}
+
+.bg-nasa {
+  background: url('../assets/nasa/bg-nasa-highlight-reel.mp4') no-repeat center center;
+  background-size: cover;
 }
 
 .bg-fordscooter {
@@ -545,63 +552,24 @@ hr {
   transition: background-position 0.8s ease-out;
 }
 
-.highlight-walker {
-  background-image: linear-gradient(to right, transparent 50%, var(--highlight-walker) 50%);
+.highlight-nasa {
+  background-image: linear-gradient(to right, transparent 50%, var(--highlight-nasa) 50%);
 }
 
-.highlight-walker.shown {
-  background-image: linear-gradient(to right, transparent 50%, var(--highlight-walker) 50%);
+.highlight-nasa.shown {
+  background-image: linear-gradient(to right, transparent 50%, var(--highlight-nasa) 50%);
 }
 
-.highlight-up {
-  background-image: linear-gradient(to right, transparent 50%, var(--highlight-up) 50%);
-}
-
-.highlight-up.shown {
-  background-image: linear-gradient(to right, transparent 50%, var(--highlight-up) 50%);
-}
-
-.highlight-REI {
-  background-image: linear-gradient(to right, transparent 50%, var(--highlight-REI) 50%);
-}
-
-.highlight-REI.shown {
-  background-image: linear-gradient(to right, transparent 50%, var(--highlight-REI) 50%);
-}
-
-.highlight-cook-fresh {
-  background-image: linear-gradient(to right, transparent 50%, var(--highlight-cook-fresh) 50%);
-}
-
-.highlight-cook-fresh.shown {
-  background-image: linear-gradient(to right, transparent 50%, var(--highlight-cook-fresh) 50%);
-}
-
-.highlight-THD {
-  background-image: linear-gradient(to right, transparent 50%, var(--highlight-THD) 50%);
-}
-
-.highlight-THD.shown {
-  background-image: linear-gradient(to right, transparent 50%, var(--highlight-THD) 50%);
-}
-
-.highlight-eatxplore {
-  background-image: linear-gradient(to right, transparent 50%, var(--highlight-eatxplore) 50%);
-}
 .highlight-fordscooter {
+  background-image: linear-gradient(to right, transparent 50%, var(--highlight-fordscooter) 50%);
+}
+
+.highlight-fordscooter.shown {
   background-image: linear-gradient(to right, transparent 50%, var(--highlight-fordscooter) 50%);
 }
 
 .highlight-ubapp {
   background-image: linear-gradient(to right, transparent 50%, var(--highlight-ubapp) 50%);
-}
-
-.highlight-eatxplore.shown {
-  background-image: linear-gradient(to right, transparent 50%, var(--highlight-eatxplore) 50%);
-}
-
-.highlight-fordscooter.shown {
-  background-image: linear-gradient(to right, transparent 50%, var(--highlight-fordscooter) 50%);
 }
 
 .highlight-ubapp.shown {
@@ -614,30 +582,6 @@ hr {
 
 .highlight-about.shown {
   background-image: linear-gradient(to right, transparent 50%, var(--highlight-about) 50%);
-}
-
-.highlight-thriller {
-  background-image: linear-gradient(to right, transparent 50%, var(--highlight-thriller) 50%);
-}
-
-.highlight-thriller.shown {
-  background-image: linear-gradient(to right, transparent 50%, var(--highlight-thriller) 50%);
-}
-
-.highlight-photos {
-  background-image: linear-gradient(to right, transparent 50%, var(--highlight-photos) 50%);
-}
-
-.highlight-photos.shown {
-  background-image: linear-gradient(to right, transparent 50%, var(--highlight-photos) 50%);
-}
-
-.highlight-google {
-  background-image: linear-gradient(to right, transparent 50%, var(--highlight-google) 50%);
-}
-
-.highlight-google.shown {
-  background-image: linear-gradient(to right, transparent 50%, var(--highlight-google) 50%);
 }
 
 
@@ -665,19 +609,26 @@ hr {
   transition-delay: 0.5s;
 }
 
-.THD-h5 {
-  border-left: 6px solid var(--THD-color);
-  padding-left: 28px;
-}
 
-.eatxplore-h5 {
-  border-left: 6px solid var(--eatxplore-color);
+.ubapp-h5{
+  border-left: 6px solid var(--ubapp-color);
   padding-left: 28px;
 }
 
 .fordscooter-h5 {
   border-left: 6px solid var(--fordscooter-color);
   padding-left: 28px;
+}
+
+.nasa-h5 {
+  border-left: 6px solid var(--nasa-color);
+  padding-left: 28px;
+}
+
+.nasa-h3{
+  border-left: 3px solid var(--nasa-color);
+  padding-left: 28px;
+  font-style: italic;
 }
 
 .walker-h5 {
@@ -1336,7 +1287,38 @@ i {
     z-index: -1;
   }
 
-    .bg-fordscooter {
+  .bg-nasa video {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transform: translate(-50%, -50%);
+    z-index: -1;
+    overflow: hidden;
+  }
+
+  /* .mute-button {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    z-index: 1;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 10px;
+    cursor: pointer;
+  } */
+
+  
+  /* .bg-nasa {
+    background: url('../assets/nasa/bg-nasa-highlight-reel.mp4') no-repeat center center;
+    background-size: cover;
+  } */
+
+  .bg-fordscooter {
     background: url('../assets/ford-scooter/bg-fordscooter-1.png') no-repeat center center;
     background-size: cover;
   }
@@ -1567,16 +1549,6 @@ i {
     z-index: -1;
   }
 
-  .bg-THD {
-    background: url('../assets/THD-jumbotron-mobile.jpg') no-repeat center center;
-    background-size: cover;
-  }
-
-  .bg-eatxplore {
-    background: url('../assets/eatxplore-jumbotron-mobile.jpg') no-repeat center center;
-    background-size: cover;
-  }
-
   .bg-walker {
     background: url('../assets/walker-jumbotron-mobile.jpg') no-repeat center center;
     background-size:cover;
@@ -1584,16 +1556,6 @@ i {
 
   .bg-up {
     background: url('../assets/up-jumbotron-mobile.jpg') no-repeat center center;
-    background-size:cover;
-  }
-
-  .bg-REI {
-    background: url('../assets/REI-jumbotron-mobile.jpg') no-repeat center center;
-    background-size:cover;
-  }
-
-  .bg-cookfresh {
-    background: url('../assets/cookfresh-jumbotron-mobile.jpg') no-repeat center center;
     background-size:cover;
   }
 
@@ -2084,5 +2046,3 @@ h6 {
 }
 
 
-
-/*new hero section*/
