--- a/css/nasa.css
+++ b/css/nasa.css
@@ -207,35 +207,17 @@
 
 @media (max-width: 480px) {
     .solution-hero {
-        height: 30vh; /* Allow content to define height */
+        height: auto; /* Allow content to define height */
     }
     
     .solution-hero img {
-        width: 100%;
         height: auto;
     }
     .solution-hero-trig {
-        display: 100; /* Hide triggers on very small screens */
+        display: none; /* Hide triggers on very small screens */
     }
     
 }
-
-@media (max-width: 350px) {
-  .solution-hero {
-      height: auto; /* Allow content to define height */
-  }
-  
-  .solution-hero img {
-      width: 100%;
-      height: auto;
-  }
-  .solution-hero-trig {
-      display: 100; /* Hide triggers on very small screens */
-  }
-  
-}
-
-
 
 
 /* caption for images */
