--- a/css/nasa.css
+++ b/css/nasa.css
@@ -158,13 +158,16 @@
     opacity: 0;
   }
 
-  @media (max-width: 1200px) {
+
+  /* the media code below is for the hero section (with the 3 clickable images) on the nasa page but it bugs out under 480px where it doesn't show the overview section anymore but i kind of fixed which caused another issue everything on mobile is just left aligned and theres a big wide-white space on the right. will come back to.*/
+
+/* @media (max-width: 1200px) {
     .solution-hero {
-        height: 75vh; /* Reduce height for medium screens */
+        height: 75vh; 
     }
     .solution-hero img {
       width: 100%;
-      height: auto; /* Maintain aspect ratio */
+      height: auto; 
     }
     .solution-hero-trig {
         width: 50%;
@@ -176,17 +179,17 @@
         left: 50%;
     }
     .trig-3 {
-        display: none; /* Hide the third trigger on medium screens */
+        display: none; 
     }
 }
 
 @media (max-width: 850px) {
     .solution-hero {
-        height: 50vh; /* Further reduce height for small screens */
+        height: 50vh; 
     }
     .solution-hero img {
         width: 100%;
-        height: auto; /* Maintain aspect ratio */
+        height: auto;
     }
     .solution-hero-trig {
         width: 100%;
@@ -207,17 +210,17 @@
 
 @media (max-width: 480px) {
     .solution-hero {
-        height: auto; /* Allow content to define height */
+        height: auto; 
     }
     
     .solution-hero img {
         height: auto;
     }
     .solution-hero-trig {
-        display: none; /* Hide triggers on very small screens */
+        display: none; 
     }
     
-}
+} */
 
 
 /* caption for images */
