--- a/css/nasa.css
+++ b/css/nasa.css
@@ -158,6 +158,33 @@
     opacity: 0;
   }
 
+@media (max-width:1200px) {
+  .solution-hero {
+    height: 75vh; 
+  }
+
+  .solution-hero img {
+    width: 100%;
+    height: auto; 
+  }
+
+  .solution-hero-trig {
+    width: 100%;
+}
+}
+
+@media (max-width:850px) {
+  .solution-hero {
+    height: 50vh; 
+  }
+}
+
+@media (max-width:480px) {
+  .solution-hero {
+    height: 30vh; 
+  }
+}
+
 
   /* the media code below is for the hero section (with the 3 clickable images) on the nasa page but it bugs out under 480px where it doesn't show the overview section anymore but i kind of fixed which caused another issue everything on mobile is just left aligned and theres a big wide-white space on the right. will come back to.*/
 
