--- a/css/nasa.css
+++ b/css/nasa.css
@@ -307,3 +307,22 @@
   transform: rotate(180deg);
 }
   
+
+/* nasa projects hero */
+
+.video-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh; 
+  z-index: 4; 
+  overflow: hidden; 
+  margin-bottom: 100vh; 
+}
+
+.fullscreen-video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
