--- a/css/style.css
+++ b/css/style.css
@@ -2135,7 +2135,7 @@ h6 {
   padding: 20px;
   border: solid #e6e6e6 1.5px;
   border-radius: 16px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 44px 0 rgba(0,0,0,0.14);
   width: 300px;
   text-align: left;
 }
